MONIT-16330: Some fixes after review.