@@ -5,26 +5,20 @@ import com.wavefront.SpanSender;
 import com.wavefront.TraceTypePattern;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Logger;
 
 public class TraceTypePatternSanitizer extends StdConverter<TraceTypePattern, TraceTypePattern> {
   private static final Logger LOGGER = Logger.getLogger(SpanSender.class.getCanonicalName());
   private final static List<TraceTypePattern.TagVariation> DEFAULT_MANDATORY_TAGS =
-      new ArrayList<>(
-          List.of(
-              new TraceTypePattern.TagVariation("application",
-                  new ArrayList<>(Arrays.asList("Application_1", "Application_2"))),
-              new TraceTypePattern.TagVariation("service",
-                  new ArrayList<>(Arrays.asList("Service_1", "Service_2")))
-          )
-      );
+      List.of(new TraceTypePattern.TagVariation("application",
+              List.of("Application_1")),
+          new TraceTypePattern.TagVariation("service",
+              List.of("Service_1", "Service_2")));
 
 
   @Override
   public TraceTypePattern convert(TraceTypePattern value) {
-
     // Check and fix the tags set
     // Mandatory Tags must exist in the set and must have values
     if (value.mandatoryTags == null) {
@@ -32,17 +26,15 @@ public class TraceTypePatternSanitizer extends StdConverter<TraceTypePattern, Tr
     }
 
     DEFAULT_MANDATORY_TAGS.forEach(tagVariation -> {
-          TraceTypePattern.TagVariation tempTagVariation =
-              value.mandatoryTags.stream().
-                  filter(givenTag -> givenTag.tagName.equals(tagVariation.tagName)).
-                  findFirst().
-                  orElseGet(() -> {
-                    value.mandatoryTags.add(tagVariation);
-                    LOGGER.warning("Missing mandatory tag was added - " + tagVariation.tagName);
-                    return tagVariation;
-                  });
+          TraceTypePattern.TagVariation tempTagVariation = value.mandatoryTags.stream().
+              filter(givenTag -> givenTag.tagName.equals(tagVariation.tagName)).findFirst().
+              orElseGet(() -> {
+                value.mandatoryTags.add(tagVariation);
+                LOGGER.warning("Missing mandatory tag was added - " + tagVariation.tagName);
+                return tagVariation;
+              });
 
-          if (tempTagVariation.tagValues.size() == 0) {
+          if (tempTagVariation.tagValues.isEmpty()) {
             tempTagVariation.tagValues.addAll(tagVariation.tagValues);
             LOGGER.warning("Values for mandatory tag were added - " + tagVariation.tagName);
           }
